# cookiecutter-decaf-python

./: .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  appveyor.yml  cookiecutter.json  setup.py  whitepaper.md  whitepaper.org
docs/: conf.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  appveyor.yaml  appveyor.yml  post-commit  pre-commit  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
{{cookiecutter.project_slug}}/ci/travis/: setup.sh
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst  reference.rst  usage.rst
{{cookiecutter.project_slug}}/release-notes/: next-release.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_module}}/: __init__.py  utils.py
{{cookiecutter.project_slug}}/tests/: test_utils.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
