[metadata]
name = {{cookiecutter.project_slug}}
url = https://github.com/{{cookiecutter.github_account}}/{{cookiecutter.project_slug}}
download_url = https://pypi.org/project/{{cookiecutter.project_slug}}/
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache Software License Version 2.0
description = {{cookiecutter.project_short_description}}
long_description = file: README.rst
keywords =

[options]
zip_safe = True
install_requires =
    depinfo
python_requires = >=2.7,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:

[options.packages.find]
where = src

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
    __init__.py
    _version.py

[tool:pytest]
testpaths = tests

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_imports = 2
known_first_party = {{cookiecutter.project_module}}
known_third_party =
    depinfo
    pytest

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/{{cookiecutter.project_module}}/_version.py
versionfile_build = {{cookiecutter.project_module}}/_version.py
tag_prefix =
parentdir_prefix = {{cookiecutter.project_slug}}-
